fixed nav alignment

--- a/sass/breakpoints/_768up.scss
+++ b/sass/breakpoints/_768up.scss
@@ -42,7 +42,7 @@ footer {
 	width: 768px;
 }
 #exhibit-pages {
-	max-width: 172px;
+	width: 172px;
 	margin-right: 20px;
 }
 .exhibits #content > h1:first-of-type,
